Fixed Bugs. Fixed Overlapping search bar. Made top bar of Chat. Given Font Family.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+
 html, * {
     margin: 0;
     padding: 0;
@@ -7,6 +10,10 @@ html, * {
     --sidebar-bg: #272c36;
     --text-color: #949aa7;
     --complementary-color: #4f9fee;
+}
+
+body {
+    font-family: "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
 }
 
 /* Side bar Styles */
